--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:example="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.amarildo.masterchef.FirstFragment">
+    tools:context="com.example.amarildo.masterchef.Steps.DropDownsStep">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -48,6 +48,7 @@
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
+                        android:scaleType="fitCenter"
                         android:src="@drawable/box_icon" />
 
                     <TextView
