--- a/app/src/main/res/layout/fragment_fifth.xml
+++ b/app/src/main/res/layout/fragment_fifth.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.amarildo.masterchef.FifthFragment">
+    tools:context="com.example.amarildo.masterchef.Steps.FifthFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
