--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -167,7 +167,13 @@
                     android:textColorLink="#ffffff" />
             </RelativeLayout>
 
+            <LinearLayout
+             android:layout_width="wrap_content"
+             android:layout_height="match_parent"
+             android:orientation="vertical"
+             android:id="@+id/passordsRelativeLayout">
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/passwordRelativeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginBottom="2dp"
@@ -202,6 +208,7 @@
             </RelativeLayout>
 
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/passwordCRelativeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginBottom="2dp"
@@ -234,6 +241,7 @@
                     android:inputType="textPassword"
                     android:textColorLink="#ffffff" />
             </RelativeLayout>
+        </LinearLayout>
 
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
