--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/currentPageTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="1"
