address dropdowns details

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,7 +87,7 @@
     <LinearLayout
         android:id="@+id/buttonsLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:weightSum="100">
@@ -103,8 +103,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="42"
             android:background="@drawable/rounded_grey_button"
             android:text="PRECEDENTE"
@@ -122,8 +122,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="42"
             android:text="SUCCESSIVO"
             android:textColor="#ffffff" />
